--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 </a>
                                 <div class="portfolio-caption">
                                     <div class="portfolio-caption-heading">Back-end Spring Boot</div>
-                                    <div class="portfolio-caption-subheading text-muted">Comcluído</div>
+                                    <div class="portfolio-caption-subheading text-muted">Concluído</div>
                                 </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                                 </a>
                                 <div class="portfolio-caption">
                                     <div class="portfolio-caption-heading">Orientação a Objetos</div>
-                                    <div class="portfolio-caption-subheading text-muted">Comcluído</div>
+                                    <div class="portfolio-caption-subheading text-muted">Concluído</div>
                                 </div>
                         </div>
                     </div>
