--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2020-2021</h4>
-                                <h4 class="subheading">Trasição</h4>
+                                <h4 class="subheading">Transição</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Após diversas questões pessoais, acabei trancando o curso. Daí pra frente trabalhei como atendente de telemarketing,
                             cujo entendimento da importância do trabalho colaborativo foi evidenciado.</p></div>
