--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="masthead-subheading">SEJA BEM VINDO</div>
                 <br>
                 <br>
-                <div class="masthead-heading text-uppercase">Desenvolvedor Web Java Jr</div>
+                <div class="masthead-heading text-uppercase">Desenvolvedor Web Jr</div>
                 <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Saber mais</a> -->
             </div>
         </header>
