--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-file-code fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">ACADEMIA KASPPER</h4>
-                        <h3 class="section-subheading text-muted" id="marg_subtilte">Desenvolvedor Web back-end Java</h3>
-                        <p class="text-muted">Academia Kaspper oferece formação ministrado por
-                            docentes especializados, para que os alunos aprendam os principais fundamentos de
-                            programação com profissionais especializados.</p>                        
+                        <h4 class="my-3">FATEC IPIRANGA</h4>
+                        <h3 class="section-subheading text-muted" id="marg_subtilte">Big Data Para Negócios</h3>
+                        <p class="text-muted">O tecnólogo em Big Data para Negócios administra grandes volumes de dados, que pelo seu valor e diversidade exigem
+                        segurança, privacidade e velocidade. Planeja a coleta de dados, executa o seu processamento e avalia as tecnologias para
+                        inteligência analítica.</p>                        
                     </div>
                 </div>
             </div>
