--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-book fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Bacharelado em Física</h4>
+                        <h4 class="my-3">UNIVERSIDADE DE SÃO PAULO</h4>
                         <h3 class="section-subheading text-muted" id="marg_subtilte">Bacharelado em Física</h3>
                         <p class="text-muted">A Universidade de São Paulo (USP) é uma das quatro grandes universidades
                             públicas mantidas pelo Governo do Estado de São Paulo. É uma das mais prestigiadas em todo o mundo.</p>
